Fixed alignment issues and changed GitHub icon info

--- a/styles/main.css
+++ b/styles/main.css
@@ -480,6 +480,4 @@ html,
 
 .frame {
 	float: left;
-	margin-left: 5px;
-	margin-top: 5px;
 }
